[package]
name = "wasijs"
version = "0.1.0"
authors = ["Yury Delendik <ydelendik@mozilla.com>"]
edition = "2018"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmemit = { path = "../../crates/wasmemit" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[lib]
crate-type = ["cdylib"]
